# casm

./: CMakeLists.txt  README.md
source/: casm.hpp
tests/: CMakeLists.txt  instructions.asm  main.cpp
